Update all. Теперь корректно работает команда checkout
