# server/app/model/pizzeria_repository.py
@@ -6,9 +6,9 @@ class PizzeriaRepository(Repository):
     def __init__(self):
         Repository.__init__(self, Pizzeria)
     
-    def get_nearest(self, address: str, count: int):
+    def get_nearest(self, address: str):
         # Это неполноценное решение, просто заглушка.
-        return self.session.query(Pizzeria).limit(count).all()
+        return self.session.query(Pizzeria).all()
     
     def is_pizzeria_address(self, address: str) -> bool:
         pizzeria = self.session.query(Pizzeria).filter_by(address=address).all()
