# server/app/views/pizzerias.py
@@ -1,12 +1,12 @@
 from . import pizzeria_repository
 
 
-def get_addresses(count, address=None):
+def get_addresses(address=None):
     pizzerias = [] 
     if address is None:
         pizzerias = pizzeria_repository.get_all()
     else:
-        pizzerias = pizzeria_repository.get_nearest(address, count)
+        pizzerias = pizzeria_repository.get_nearest(address)
     ret = []
     for pizzeria in pizzerias:
         ret.append(pizzeria.address)
