# server/app/views/time.py
@@ -1,13 +1,14 @@
-import random
-
-
 def get_delivery_time(address, user, token_info):
-    return {
-        'time': random.randint(10, 45)
-    }
+    return [
+        ['2024-05-15T10:00:15.310793+00:00', '2024-05-15T13:00:15.310793+00:00'],
+        ['2024-05-15T13:00:15.310793+00:00', '2024-05-15T16:00:15.310793+00:00'],
+        ['2024-05-15T16:00:15.310793+00:00', '2024-05-15T19:00:15.310793+00:00']
+    ]
 
 
 def get_cooking_time(user, token_info):
-    return {
-        'time': random.randint(10, 60)
-    }
+    return [
+        ['2024-05-15T10:00:15.310793+00:00', '2024-05-15T13:00:15.310793+00:00'],
+        ['2024-05-15T13:00:15.310793+00:00', '2024-05-15T16:00:15.310793+00:00'],
+        ['2024-05-15T16:00:15.310793+00:00', '2024-05-15T19:00:15.310793+00:00']
+    ]
